--- a/site/blog-gatsby/src/components/Layout/common.scss
+++ b/site/blog-gatsby/src/components/Layout/common.scss
@@ -1,21 +1,21 @@
-* {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
+// * {
+//   -webkit-box-sizing: border-box;
+//   -moz-box-sizing: border-box;
+//   box-sizing: border-box;
+// }
 
-a {
-  text-decoration: none;
-  color: rgb(61, 146, 201);
-}
-a:hover,
-a:focus {
-  text-decoration: underline;
-}
+// a {
+//   text-decoration: none;
+//   color: rgb(61, 146, 201);
+// }
+// a:hover,
+// a:focus {
+//   text-decoration: underline;
+// }
 
-h3 {
-  font-weight: 100;
-}
+// h3 {
+//   font-weight: 100;
+// }
 
 /* LAYOUT CSS */
 .pure-img-responsive {
@@ -23,20 +23,17 @@ h3 {
   height: auto;
 }
 
-#layout {
-  padding: 0;
-}
+// #layout {
+//   padding: 0;
+// }
 
-.header {
-  text-align: center;
-  top: auto;
-  margin: 3em auto;
-}
+// .header {
+//   text-align: center;
+//   top: auto;
+//   margin: 3em auto;
+// }
 
-.sidebar {
-  background: rgb(61, 79, 93);
-  color: #fff;
-}
+
 
 .brand-title,
 .brand-tagline {
@@ -201,20 +198,20 @@ h3 {
 
 @media (min-width: 48em) {
   .content {
-    padding: 2em 3em 0;
-    margin-left: 25%;
+    // padding: 2em 3em 0;
+    // margin-left: 25%;
   }
 
   .header {
-    margin: 80% 2em 0;
-    text-align: right;
+    // margin: 80% 2em 0;
+    // text-align: right;
   }
 
-  .sidebar {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-  }
+  // .sidebar {
+  //   position: fixed;
+  //   top: 0;
+  //   bottom: 0;
+  // }
 
   .footer {
     // text-align: center;
