--- a/site/blog-gatsby/src/styles/global.css
+++ b/site/blog-gatsby/src/styles/global.css
@@ -1,3 +1,35 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  /*定义滚动条高宽及背景 高宽分别对应横竖滚动条的尺寸*/
+  ::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+    background-color: #eee;
+  }
+
+  /*定义滚动条轨道 */
+  ::-webkit-scrollbar-track {
+    background-color: #eee;
+  }
+
+  /*定义滑块 */
+  ::-webkit-scrollbar-thumb {
+    background-color: #ddd;
+  }
+
+  /* h1 {
+    @apply text-2xl;
+  }
+  h2 {
+    @apply text-xl;
+  }
+  h3 {
+    @apply text-lg;
+  } */
+  a {
+    @apply transition ease-in-out duration-300 text-teal-700 hover:text-teal-700/75;
+  }
+}
