--- a/site/blog-gatsby/src/styles/global.css
+++ b/site/blog-gatsby/src/styles/global.css
@@ -29,7 +29,7 @@
   h3 {
     @apply text-lg;
   } */
-  a {
+  /* a {
     @apply transition ease-in-out duration-300 text-[#006b84] hover:text-[#006b84]/75;
-  }
+  } */
 }
