feat(site): update dependencies and replace emotion

--- a/site/blog-gatsby/src/styles/global.css
+++ b/site/blog-gatsby/src/styles/global.css
@@ -39,3 +39,18 @@
     background-attachment: fixed;
   } */
 }
+
+@layer utilities {
+  .logo-rotate {
+    animation: rotate infinite 6s linear;
+  }
+
+  @keyframes rotate {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(-360deg);
+    }
+  }
+}
