--- a/site/blog-gatsby/src/styles/global.css
+++ b/site/blog-gatsby/src/styles/global.css
@@ -53,4 +53,15 @@
       transform: rotate(-360deg);
     }
   }
+
+  .header-line-shadow {
+    @apply relative z-10;
+  }
+  .header-line-shadow::before {
+    @apply fixed content-[''] w-full;
+    box-shadow: 0 0 4px 1px #ddd;
+  }
+  .header-line-shadow::after {
+    @apply absolute content-[''] w-full h-5 bg-gradient-to-b from-white to-transparent;
+  }
 }
