--- a/site/blog/src/styles/globals.scss
+++ b/site/blog/src/styles/globals.scss
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@import url("./brand.scss");
 @layer base {
   /*定义滚动条高宽及背景 高宽分别对应横竖滚动条的尺寸*/
   ::-webkit-scrollbar {
