--- a/site/blog/app/styles/globals.scss
+++ b/site/blog/app/styles/globals.scss
@@ -785,7 +785,7 @@
     box-shadow: 0 0 4px 1px #ddd;
   }
   .header-line-shadow::after {
-    @apply absolute content-[''] w-full h-5 bg-gradient-to-b from-white to-transparent;
+    @apply absolute content-[''] w-full h-1 bg-gradient-to-b from-white to-white;
   }
 }
 
