--- a/site/blog/app/styles/globals.scss
+++ b/site/blog/app/styles/globals.scss
@@ -787,6 +787,25 @@
   .header-line-shadow::after {
     @apply absolute content-[''] w-full h-1 bg-gradient-to-b from-white to-white;
   }
+
+  @keyframes fadeInUp {
+    from {
+      opacity: 0;
+      transform: translate3d(0, 100%, 0);
+    }
+
+    to {
+      opacity: 1;
+      transform: translate3d(0, 0, 0);
+    }
+  }
+  .fade-in-up,
+  .fade-in-up-content > * {
+    animation-duration: 1s;
+    animation-duration: 1s;
+    animation-fill-mode: both;
+    animation-name: fadeInUp;
+  }
 }
 
 // :root {
