--- a/site/blog/app/posts/[slug]/styles.scss
+++ b/site/blog/app/posts/[slug]/styles.scss
@@ -34,6 +34,13 @@
 
 @media (min-width: 1024px) {
   #toc + ul {
-    display: block!important;
+    display: block !important;
   }
+}
+
+.prose .shiki {
+  font-family: DM Mono, Input Mono, Fira Code, monospace;
+  font-size: 0.92em;
+  line-height: 1.4;
+  // margin: 0.5em 0;
 }
