--- a/site/blog/app/posts/[slug]/styles.scss
+++ b/site/blog/app/posts/[slug]/styles.scss
@@ -44,3 +44,8 @@
   line-height: 1.4;
   // margin: 0.5em 0;
 }
+
+// TODO: shikiji 未对纯文本样式做适配
+.prose .shiki.nord[lang=plaintext] :where(code) {
+  color: #d8dee9ff;
+}
