feat(site/blog): update dependencies and adujst styles

--- a/site/blog/app/posts/[slug]/styles.scss
+++ b/site/blog/app/posts/[slug]/styles.scss
@@ -48,6 +48,6 @@
 }
 
 // TODO: shikiji 未对纯文本样式做适配
-.prose .shiki.nord[lang=plaintext] :where(code) {
+.prose .shiki.nord :where(code) {
   color: #d8dee9ff;
 }
