--- a/site/blog/app/posts/[slug]/styles.scss
+++ b/site/blog/app/posts/[slug]/styles.scss
@@ -40,9 +40,13 @@
   }
 }
 
-.prose .shiki {
+.prose pre.shiki {
   font-family: DM Mono, Input Mono, Fira Code, monospace;
   font-size: 0.92em;
   line-height: 1.4;
   // margin: 0.5em 0;
+
+  code {
+    color: inherit;
+  }
 }
