--- a/site/blog/app/(web)/posts/[slug]/styles.scss
+++ b/site/blog/app/(web)/posts/[slug]/styles.scss
@@ -40,7 +40,7 @@
   }
 }
 
-.prose pre.shiki {
+.prose pre.shiki.nord {
   font-family: DM Mono, Input Mono, Fira Code, monospace;
   font-size: 0.92em;
   line-height: 1.4;
