--- a/site/blog/app/(web)/posts/[slug]/styles.scss
+++ b/site/blog/app/(web)/posts/[slug]/styles.scss
@@ -40,13 +40,11 @@
   }
 }
 
-.prose pre.shiki.nord {
+.prose pre.shiki.vitesse-light {
   font-family: DM Mono, Input Mono, Fira Code, monospace;
   font-size: 0.92em;
   line-height: 1.4;
   // margin: 0.5em 0;
 
-  code {
-    color: inherit;
-  }
+  background-color: #f9f9f9 !important;
 }
