--- a/site/blog/app/(web)/code-snippets/[slug]/styles.scss
+++ b/site/blog/app/(web)/code-snippets/[slug]/styles.scss
@@ -1,5 +1,9 @@
-.prose pre.shiki.vitesse-light {
-  font-family: DM Mono, Input Mono, Fira Code, monospace;
+.prose pre.shiki {
+  font-family:
+    DM Mono,
+    Input Mono,
+    Fira Code,
+    monospace;
   font-size: 0.92em;
   line-height: 1.4;
   // margin: 0.5em 0;
@@ -7,3 +11,6 @@
   background-color: #f9f9f9 !important;
 }
 
+.dark .prose pre.shiki {
+  background-color: rgb(15 23 42) !important;
+}
